Deploy: resolve typing-extensions conflict; move DL deps to optional

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,8 @@ pandas==2.0.3
 Pillow==10.0.0
 opencv-python==4.8.0.76
 
-# Deep Learning (Optional for advanced image/text)
-tensorflow==2.13.0
-torch==2.0.1
-torchvision==0.15.2
+# Deep Learning (moved to requirements-optional.txt for deploy stability)
+# tensorflow, torch, torchvision are optional and heavy; install only if needed.
 
 # Hyperparameter Optimization
 optuna==3.6.2
@@ -26,6 +24,7 @@ FastAPI==0.104.1
 uvicorn==0.24.0
 pydantic==2.4.2
 python-multipart==0.0.6
+typing-extensions==4.8.0
 
 # Development & Testing
 pytest==7.4.3
